OTHER: Add my current email address

--- a/AUTHORS
+++ b/AUTHORS
@@ -325,7 +325,8 @@ D: Optional ldconfig in buildsystem
 
 N: Andrew G Potter
 E: agpotter@ucdavis.edu
-D: Medialib handling bugfix
+E: agpotter@gmail.com
+D: Misc bugfixs
 
 N: Robin Lee Powell
 E: rlpowell@chain.digitalkingdom.org
